# ars_40X

./: CMakeLists.txt  README.md  package.xml
include/ars_40X/: ars_40X_can.hpp  cluster_list.hpp  motion_input_signals.hpp  object_list.hpp  radar_cfg.hpp  radar_state.hpp
include/ars_40X/ros/: ars_40X_ros.hpp  ars_40X_rviz.hpp  cluster_list_ros.hpp  motion_input_signals_ros.hpp  object_list_ros.hpp  obstacle_array.hpp  radar_cfg_ros.hpp  radar_state_ros.hpp
include/continental_radar/: cluster_list.hpp  continental_radar_can.hpp  continental_radar_msg.hpp  continental_radar_ros.hpp  motion_input_signals.hpp  object_list.hpp  radar_cfg.hpp  radar_state.hpp
include/continental_radar/ros/: cluster_list_ros.hpp  continental_radar_ros.hpp  continental_radar_rviz.hpp  motion_input_signals_ros.hpp  object_list_ros.hpp  obstacle_array.hpp  radar_cfg_ros.hpp  radar_state_ros.hpp
launch/: ars_40X.launch
msg/: Cluster.msg  ClusterList.msg  Object.msg  ObjectList.msg  RadarStatus.msg
rviz_cfg/: ars_40X.rviz
scripts/: convert_to_radardetectionlist.py
src/: ars_40X_can.cpp  cluster_list.cpp  continental_radar_can.cpp  continental_radar_msg.cpp  continental_radar_ros.cpp  continental_radar_rviz.cpp  motion_input_signals.cpp  object_list.cpp  radar_cfg.cpp  radar_state.cpp  radar_viz.cpp
src/ros/: ars_40X_obstacle_array.cpp  ars_40X_ros.cpp  ars_40X_rviz.cpp  cluster_list_ros.cpp  continental_radar_ros.cpp  continental_radar_rviz.cpp  motion_input_signals_ros.cpp  object_list_ros.cpp  obstacle_array.cpp  radar_cfg_ros.cpp  radar_state_ros.cpp
srv/: MaxDistance.srv  OutputType.srv  RCSThreshold.srv  RadarPower.srv  SensorID.srv  SortIndex.srv
